--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,23 @@ Also disable the dropdown arrow from highlighting when hovered by doing pointer-
     transform: translateX(100%);
     background-color: #4dc3ff;
   }
+
+  /* Base button styles */
+  .basebutton {
+    background-color: #3b82f6;
+    color: #fff;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+  }
+  
+  .basebutton:hover:not([disabled]) {
+    cursor: pointer;
+    background-color: #2563eb;
+  }
+  
+  .basebutton:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+  
